--- a/trunk/configs/templates/T6M.config
+++ b/trunk/configs/templates/T6M.config
@@ -3,7 +3,7 @@ CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7621
 
 ### Target ProductID (board select, max 12 symbols)
-CONFIG_FIRMWARE_PRODUCT_ID="JCG-Q20"
+CONFIG_FIRMWARE_PRODUCT_ID="T6M"
 
 ### Linux kernel and toolchain
 CONFIG_FIRMWARE_INCLUDE_SFE=y
