--- a/trunk/linux-4.4.x/arch/mips/boot/dts/ralink/360-t6m.dts
+++ b/trunk/linux-4.4.x/arch/mips/boot/dts/ralink/360-t6m.dts
@@ -17,11 +17,11 @@
 		compatible = "gpio-leds";
 
 		sys_red {
-			label = "power_red";
-			gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
+			label = "power_2";
+			gpios = <&gpio0 13 GPIO_ACTIVE_LOW>;
 		};
 
-		sys_blue {
+		sys_green {
 			label = "power";
 			gpios = <&gpio0 15 GPIO_ACTIVE_LOW>;
 		};
